src/test/ui/parser/issues/issue-20711.rs
struct Foo;

impl Foo {
    #[stable(feature = "rust1", since = "1.0.0")]
    //~^ ERROR expected item after attributes
}

fn main() {}
